# equiClear

./: .gitignore  .txt  ALEO_TESTNET_SETUP.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  README.md  REDEPLOY_BALANCE.md  developer.prospective  render.yaml  users.req
.claude/: settings.local.json
contracts/: .env.example  build.sh
contracts/auction/: Cargo.toml  deploy.sh  program.json
contracts/auction/src/: auction.leo  main.leo  types.leo
contracts/balance/: Cargo.toml  program.json
contracts/balance/src/: balance.leo  main.leo  types.leo
contracts/bid/: Cargo.toml  program.json
contracts/bid/src/: bid.leo  main.leo  types.leo
contracts/claim/: Cargo.toml  program.json
contracts/claim/src/: claim.leo  main.leo  types.leo
frontend/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: vite-env.d.ts
frontend/src/components/: AuctionCard.tsx  AuctionGrid.tsx  BalanceCard.tsx  BidForm.tsx  ClaimList.tsx  DepositForm.tsx  DisconnectedState.tsx  LandingPage.tsx  Navbar.tsx  Notifications.tsx  WithdrawForm.tsx  index.ts
frontend/src/contexts/: WalletContext.tsx
frontend/src/pages/: _app.tsx  _document.tsx  claims.tsx  create-auction.tsx  index.tsx  wallet.tsx
frontend/src/services/: aleo.ts  api.ts  balance.ts  wallet.ts
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
indexer/: .env.example  Cargo.toml  Dockerfile
indexer/src/: events.rs  main.rs  service.rs  state.rs
shared/: Cargo.toml
shared/src/: constants.leo  utils.leo
supabase/: schema.sql
(+1 files in other folders)
